syntax = "proto3";

package pdf;

service PDFService {
  rpc UploadPDF (UploadPDFRequest) returns (UploadPDFResponse);
  rpc EmbedDocument (EmbedDocumentRequest) returns (EmbedDocumentResponse);
}

message UploadPDFRequest {
  string file_path = 1;
}

message UploadPDFResponse {
  string message = 1;
}

message EmbedDocumentRequest {
  string collection_name = 1;
  string filename = 2;
  string document_type = 3;
}

message EmbedDocumentResponse {
  string message = 1;
}